# C_containers

./: Makefile.am  Makefile.in  aclocal.m4  configure.ac
include/: arrays.h  bit_sets.h  containers.h  deephashtabs.h  deepqueues.h  deepstacks.h  hashtabs.h  queues.h  stacks.h  staticstacks.h
lib/: Makefile.am  Makefile.bak  Makefile.in
m4/: gnulib-cache.m4  gnulib-comp.m4
src/: arrays.c  bit_sets.c  config.h.in  deephashtabs.c  deepqueues.c  deepstacks.c  hashtabs.c  queues.c  stacks.c
test/: comp.sh  test1.c
